--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Commerce
 excludes=
+file.reference.mssql-jdbc-8.2.2.jre11.jar=E:\\SQL\\sqljdbc_8.2.2.0_enu\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mssql-jdbc-8.2.2.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
