--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Commerce
+application.vendor=Khoi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Commerce.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Commerce
+endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-8.2.2.jre11.jar=E:\\SQL\\sqljdbc_8.2.2.0_enu\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre11.jar
 includes=**
@@ -77,7 +79,7 @@ main.class=Commerce.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=Oracle_20.0.2
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
