--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/Commerce
 endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-8.2.2.jre11.jar=E:\\SQL\\sqljdbc_8.2.2.0_enu\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre11.jar
+file.reference.mssql-jdbc-8.2.2.jre8.jar=C:\\Users\\Khoi\\Downloads\\sqljdbc_8.2.2.0_enu\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-8.2.2.jre11.jar}
+    ${file.reference.mssql-jdbc-8.2.2.jre11.jar}:\
+    ${file.reference.mssql-jdbc-8.2.2.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=20
-javac.target=20
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -79,7 +81,7 @@ main.class=Commerce.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_20.0.2
+platform.active=Oracle_OpenJDK_8.0.342_7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
