--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,8 +48,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=20
-javac.target=20
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -79,7 +79,7 @@ main.class=Commerce.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_20.0.2
+platform.active=Oracle_OpenJDK_11.0.16_8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
