--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.mssql-jdbc-8.2.2.jre8.jar=D:\\Butt_Thien
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
